tests/expectations/compiler/scalar/no_space_between_literal.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:5:13
     |
   5 |       let f = 1 scalar;
     |             ^"""]
